Add a few more questionds and get rid of one duplicate.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -385,6 +385,37 @@
 {no}{0}
 \qstop
 
+\qstart{What things are called personal?}
+{responding to the personality circuit of the Father}{1}
+{exhibiting intelligent behaviour}{0}
+{possessing self-consciousness}{0}
+\qstop
+
+\qstart{What things we call spirit?}
+{responding to the spirit circuit of the Eternal Son}{1}
+{originating in the Infinite Spirit}{0}
+{endowed with eternal life}{0}
+{invisible to mortal eyes}{0}
+\qstop
+
+\qstart{What things we call mater?}
+{responding to the material-gravity circuit centring in nether Paradise}{1}
+{visible to mortal eyes}{0}
+{that can perish with time}{0}
+\qstop
+
+\qstart{Where do the lines of spirit gravity lead back to?}
+{Eternal Son}{1}
+{Universal Father}{0}
+{Infinite Spirit}{0}
+\qstop
+
+\qstart{When was Havona (the central universe) created?}
+{500 billion years ago}{0}
+{6,000 years ago, on the first day of creation}{0}
+{never, it existed from eternity}{1}
+{9 billion years ago, at Big Bang}{0}
+\qstop
 
 \qpaper{1}{The Universal Father}
 
@@ -454,13 +485,128 @@
 
 \qpaper{7}{Relation of the Eternal Son to the Universe}
 
+\qstart{Can the Eternal Son contact directly with human beings as the Father does through the gift of the prepersonal Thought Adjusters?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Did the bestowals of the Eternal Son in Havona add to the supposed experiential capacity of his existential nature?}
+{yes}{0}
+{no}{0}
+{we do not know, because this would fall within the bestowal mystery of the Paradise Sons}{1}
+\qstop
+
+\qstart{Does the Eternal Son fully comprehend the eternal plan of the Universal Father for the universe of universes?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Does spirit gravity suffer time delays?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Does spirit gravity undergo space diminution?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{The transcendence of time and space by pure spirit energies is...}
+{due to the interposition of the antigravity forces of the Third Source and Centre}{0}
+{inherent in the absoluteness of the Eternal Son}{1}
+\qstop
+
 \qpaper{8}{The Infinite Spirit}
 
+\qstart{Which of the Paradise Deities is the first to be attained by the ascending pilgrims?}
+{Universal Father}{0}
+{Eternal Son}{0}
+{Infinite Spirit}{1}
+\qstop
+
+\qstart{God is love, the Son is mercy, the Spirit is...}
+{law}{0}
+{obedience}{0}
+{peace}{0}
+{ministry}{1}
+\qstop
+
+\qstart{Is the Conjoint Creator omnipotent?}
+{yes}{0}
+{no}{0}
+{only in the domain of mind}{1}
+\qstop
+
 \qpaper{9}{Relation of the Infinite Spirit to the Universe}
+
+\qstart{Who or what is the apparent ancestor of motion, change, and relationship?}
+{Paradise}{0}
+{Havona}{0}
+{Eternal Son}{0}
+{God of Action (The Third Source and Centre)}{1}
+\qstop
+
+\qstart{Is the power of antigravity observably present in either the Universal Father or the Eternal Son?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Is the gravity-resistant phenomenon of a gyroscope of value to illustrate the effect of antigravity?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{Is the gravity-resistant phenomenon of a gyroscope of value to illustrate the cause of antigravity?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Which of these is a typical use of antigravity in the grand universe?}
+{establish physical equilibrium of the matter and energies}{1}
+{transport}{0}
+{overriding natural course of events on evolutionary worlds}{0}
+{amusement of the Deities}{0}
+\qstop
+
+\qstart{Is mind inherent in energy?}
+{yes}{0}
+{no}{1}
+\qstop
+
+\qstart{Is spirit always intelligent, i.e. minded in some way?}
+{yes}{1}
+{not necessarily}{0}
+\qstop
+
+\qstart{Is the Conjoint Creator absolute?}
+{yes}{0}
+{no}{0}
+{only in the realms of universal intelligence}{1}
+\qstop
+
+\qstart{What is the source of the mind endowment of the seven superuniverses?}
+{Seven Master Spirits}{1}
+{Seven Supreme Executives}{0}
+{Architects of the Master Universe}{0}
+{Ancients of Days}{0}
+{The Infinite Spirit}{0}
+\qstop
+
+\qstart{Energy is thing, mind is meaning, spirit is...}
+{value}{1}
+{substance}{0}
+{destiny}{0}
+{light}{0}
+\qstop
 
 \qpaper{10}{The Paradise Trinity}
 
 \qpaper{11}{The Eternal Isle of Paradise}
+
+\qstart{Does cosmic force respond to mind?}
+{no}{0}
+{yes}{1}
+\qstop
 
 \qstart{What is the source of absolute gravity?}
 {Paradise}{1}
@@ -505,7 +651,23 @@
 {Coordinate time as measured by the clock attached to a given moving observer's frame of reference}{0}
 \qstop
 
+\qstart{Is the Andromeda Galaxy (M31) inside or outside the space level of inhabited superuniverses?}
+{inside}{0}
+{outside}{1}
+{exactly on the border}{0}
+\qstop
+
 \qpaper{13}{The Sacred Spheres of Paradise}
+
+\qstart{Which of these are forever forbidden to us?}
+{Divinington}{1}
+{nether Paradise}{1}
+{the seven sacred Paradise satellites of the Son}{1}
+{Paradise}{0}
+{Uversa}{0}
+{Sonarington}{0}
+{Ascendington}{0}
+\qstop
 
 \qstart{What are the executuve-headquarters of the Seven Master Spirits?}
 {seven sacred spheres of the Infinite Spirit}{1}
@@ -1203,6 +1365,13 @@
 {$\infty$}{0}
 \qstop
 
+\qstart{Which of these are \bibemph{not} absonite beings?}
+{Architects of the Master Universe}{0}
+{Primary Master Force Organizers}{0}
+{Transcendental Recorders}{0}
+{Seven Master Spirits}{1}
+\qstop
+
 \qpaper{17}{The Seven Supreme Spirit Groups}
 
 \qpaper{18}{The Supreme Trinity Personalities}
@@ -1218,6 +1387,20 @@
 \qpaper{23}{The Solitary Messengers}
 
 \qpaper{24}{Higher Personalities of the Infinite Spirit}
+
+\qstart{Which of these beings are endowed with antigravity?}
+{Solitary Messengers}{1}
+{Census Directors}{1}
+{Universe Circuit Supervisors}{1}
+{Associate Inspectors}{0}
+{Supreme Power Centers}{1}
+{Personal Aids of the Infinite Spirit}{1}
+\qstop
+
+\qstart{Does the Infinite Spirit transmit the power of antigravity to other personalities?}
+{yes}{1}
+{no}{0}
+\qstop
 
 \qpaper{25}{The Messenger Hosts of Space}
 
@@ -1245,9 +1428,104 @@
 {Adamic default}{1}
 \qstop
 
+\qstart{What does the Bible refer to when it talks about ``the seven spirits of God like lamps burning before the throne''?}
+{seven Absolutes}{0}
+{seven Master Spirits of the superuniverses}{0}
+{seven adjutant mind-spirits}{1}
+\qstop
+
+\qstart{Are animals relevant to the intellectual and physical evolution of humans?}
+{Yes, because of the experiential growth of the first five adjutant mind-spirits}{1}
+{Not at all}{0}
+{Not anymore}{0}
+\qstop
+
+\qstart{How many adjutant mind-spirits are there?}
+{3}{0}
+{4}{0}
+{7}{1}
+{10}{0}
+{12}{0}
+\qstop
+
+\qstart{Which of these is \bibemph{not} one of the seven adjutant mind-spirits?}
+{intuition}{0}
+{understanding}{0}
+{courage}{0}
+{knowledge}{0}
+{counsel}{0}
+{worship}{0}
+{wisdom}{0}
+{intellect}{1}
+\qstop
+
+\qstart{How many adjutant mind-spirits are reachable by subhuman (animal) mind?}
+{all 7}{0}
+{5}{1}
+{4}{0}
+{1}{0}
+{none}{0}
+{3}{0}
+\qstop
+
+\qstart{Which of the adjutant mind-spirits can minister only to human or midwayer (super-animal) level of mind?}
+{worship and wisdom}{1}
+{intuition and understanding}{0}
+{courage and counsel}{0}
+{intuition and knowledge}{0}
+\qstop
+
+\qstart{Which of the adjutant mind-spirits makes the most extensive contact with nonteachable (subhuman) levels of mind?}
+{intuition}{1}
+{courage}{0}
+{counsel}{0}
+{understanding}{0}
+\qstop
+
+\qstart{Which adjutant mind-spirit is responsible for spontaneous association of ideas and co-ordination of acquired knowledge?}
+{understanding}{1}
+{intuition}{0}
+{knowledge}{0}
+{wisdom}{0}
+\qstop
+
+\qstart{Which adjutant mind-spirit is responsible for the ability of will creatures to harmonize with their fellows and the origin of the gregarious instinct among the more lowly creatures?}
+{counsel}{1}
+{intuition}{0}
+{understanding}{0}
+{worship}{0}
+{knowledge}{0}
+\qstop
+
+\qstart{How many adjutant mind-spirits minister to midwayer as well as human types of mind?}
+{all seven}{0}
+{three}{0}
+{two}{1}
+{four}{0}
+\qstop
+
+\qstart{Which adjutant mind-spirits minister to midwayer minds?}
+{worship and wisdom}{1}
+{intuition and wisdom}{0}
+{knowledge and understanding}{0}
+{counsel and wisdom}{0}
+\qstop
+
+\qstart{Receptivity to which of the seven adjutant mind-spirits serves as a badge for spiritual-ascension candidacy of mortals?}
+{wisdom}{0}
+{knowledge}{0}
+{worship}{1}
+{courage}{0}
+\qstop
+
 \qpaper{35}{The Local Universe Sons of God}
 
 \qpaper{36}{The Life Carriers}
+
+\qstart{Do the seven adjutant mind-spirits ever become personal?}
+{no}{1}
+{yes}{0}
+\qstop
 
 \qstart{Which number is inherent in the physical organization of energy and matter, but not in the spiritual?}
 {10}{1}
@@ -1280,7 +1558,26 @@
 
 \qpaper{41}{Physical Aspects of the Local Universe}
 
+\qstart{How many stars are in our local system of Satania?}
+{2000+}{1}
+{1000+}{0}
+{100000}{0}
+{1000000}{0}
+\qstop
+
+\qstart{What is the largest star in our universe?}
+{$\alpha$ Piscis Austrini (Fomalhaut)}{0}
+{$\alpha$ Centauri}{0}
+{$\alpha$ Scorpii (Antares)}{1}
+{$\tau$ Ceti}{0}
+\qstop
+
 \qpaper{42}{Energy --- Mind and Matter}
+
+\qstart{Can ultimatonic energies sometimes exhibit antigravity behaviour?}
+{yes}{1}
+{no}{0}
+\qstop
 
 \qstart{What is the lowest density of matter-energy known in our local universe?}
 {100 ultimatons in 16.4 cm\ts{3}}{1}
@@ -1353,7 +1650,19 @@
 {none, they are not members}{0}
 \qstop
 
+\qstart{How many seats of the Four and Twenty Counsellors are not permanently occupied?}
+{8}{1}
+{4}{0}
+{0}{0}
+{1}{0}
+\qstop
+
 \qpaper{46}{The Local System Headquarters}
+
+\qstart{Is the doctrine of human re\hyp{}incarnation true or false?}
+{true}{0}
+{false}{1}
+\qstop
 
 \qpaper{47}{The Seven Mansion Worlds}
 
@@ -1374,6 +1683,13 @@
 \qpaper{50}{The Planetary Princes}
 
 \qpaper{51}{The Planetary Adams}
+
+\qstart{When is the slavery abolished on a normal evolutionary sphere?}
+{upon arrival of Adam}{1}
+{upon arrival of Planetary Prince}{0}
+{in the age of Light and Life}{0}
+{persists forever}{0}
+\qstop
 
 \qpaper{52}{Planetary Mortal Epochs}
 
@@ -1481,6 +1797,17 @@
 \qstop
 
 \qpaper{58}{Life Establishment on Urantia}
+
+\qstart{Does human mind depend on the brain capacity?}
+{yes}{1}
+{no}{0}
+\qstop
+
+\qstart{How do the new species arise?}
+{as the result of the gradual accumulation of small variations}{0}
+{suddenly, as full\hyp{}fledged and new orders of life}{1}
+{by the direct act of Deity}{0}
+\qstop
 
 \qpaper{59}{The Marine\hyp{}Life Era on Urantia}
 
@@ -1669,6 +1996,11 @@
 {died of old age}{0}
 \qstop
 
+\qstart{Is man an evolutionary descendant from apes?}
+{no}{1}
+{yes}{0}
+\qstop
+
 \qpaper{63}{The First Human Family}
 
 \qstart{What names were bestowed upon the first human beings at the time of fusion?}
@@ -1677,6 +2009,13 @@
 {Sonta\hyp{}an and Sonta\hyp{}en}{0}
 {Andon and Fonta}{1}
 {Abraham and Sarah}{0}
+\qstop
+
+\qstart{What decision of Andon and Fonta constituted their first response to the adjutant mind-spirit of wisdom?}
+{worship God and him only}{0}
+{marry}{0}
+{flee home}{1}
+{eat only vegetables}{0}
 \qstop
 
 \qstart{How many years did Andon and Fonta live?}
@@ -1691,6 +2030,18 @@
 {drowned}{0}
 {killed by gibbons}{0}
 {ate poison mushrooms}{0}
+\qstop
+
+\qstart{Which present-day group of people resembles the early Andonites most?}
+{negroes}{0}
+{Eskimo}{1}
+{native American indians}{0}
+{Australian aborigenes}{0}
+\qstop
+
+\qstart{Which of the first humans responded to the influence of the adjutant mind-spirit of worship first?}
+{Andon}{0}
+{Fonta}{1}
 \qstop
 
 \qpaper{64}{The Evolutionary Races of Colour}
@@ -1881,6 +2232,13 @@
 
 \qpaper{68}{The Dawn of Civilization}
 
+\qstart{Which ancient people never had a taboo on twins?}
+{Andonites}{1}
+{red}{0}
+{yellow}{0}
+{orange}{0}
+\qstop
+
 \qpaper{69}{Primitive Human Institutions}
 
 \qstart{When did the aborigines of Australia abolish slavery?}
@@ -1914,11 +2272,25 @@
 {no one}{1}
 \qstop
 
+\qstart{What happened to the tree of life after Nodites invaded Eden?}
+{destroyed by fire}{1}
+{chopped into pieces and swallowed}{0}
+{ground to dust}{0}
+{sold for thirty pieces of silver}{0}
+\qstop
+
 \qstart{What happened to the Nodites after they ate of the tree of life?}
 {nothing}{1}
 {it poisoned them}{0}
 {lightning struck them dead}{0}
 {they developed stomach cancer within 7 days}{0}
+\qstop
+
+\qstart{What does the Biblical expression ``eating of the tree of the knowledge of good and evil'' really mean?}
+{literally eating of some forbidden tree, as the Bible says so}{0}
+{combining good and evil}{1}
+{knowing one another intimately}{0}
+{learning to distinguish between good and evil}{0}
 \qstop
 
 \qpaper{74}{Adam and Eve}
@@ -2066,6 +2438,13 @@
 {666 years}{0}
 \qstop
 
+\qstart{How many children did Adam and Eve have before coming to this planet?}
+{12}{0}
+{100}{1}
+{none}{0}
+{3}{0}
+\qstop
+
 \qpaper{75}{The Default of Adam and Eve}
 
 \qstart{Which of these was the father of Cain?}
@@ -2085,6 +2464,13 @@
 {40 years}{0}
 \qstop
 
+\qstart{How did the members of Adam's family cook their food?}
+{roasted on open fire}{0}
+{baked in stone ovens}{0}
+{didn't cook at all --- ate it raw}{1}
+{boiled in the water}{0}
+\qstop
+
 \qpaper{76}{The Second Garden}
 
 \qstart{The transgression of Adam and Eve was ...}
@@ -2096,6 +2482,12 @@
 {yes, but only for 100 years}{1}
 {yes, for as long as they lived}{0}
 {no}{0}
+\qstop
+
+\qstart{Adam and Eve were indwelt by Thought Adjusters...}
+{when they were citizens of Jerusem}{0}
+{during their life in the first garden prior to the default}{0}
+{after they were reduced to mortal status subsequent to the default}{1}
 \qstop
 
 \qstart{The name of the first child of Adam and Eve to be born in the second garden was ...}
@@ -2226,6 +2618,12 @@
 {99,984}{0}
 \qstop
 
+\qstart{Who is the eldest Primary Midwayer?}
+{1-2-3 the First}{1}
+{the Father Midwayer}{0}
+{Adamson}{0}
+{Adam}{0}
+\qstop
 
 \qstart{What or who is A-B-C the First?}
 {Primary Midwayer}{0}
@@ -2267,6 +2665,13 @@
 {100 millions}{0}
 \qstop
 
+\qstart{When did Adamites cease to exist as a race upon Urantia?}
+{15,000 B.C.}{1}
+{6,000 B.C.}{0}
+{600 B.C.}{0}
+{300 A.D.}{0}
+\qstop
+
 \qpaper{79}{Andite Expansion in the Orient}
 
 \qstart{When did the main body of the yellow race enter China?}
@@ -2287,7 +2692,39 @@
 {Alexander the Great}{0}
 \qstop
 
+\qstart{What happened to the remnants of Neanderthal races?}
+{exterminated by the Adamites}{1}
+{became extinct}{0}
+{exterminated by the Nodites}{0}
+\qstop
+
+\qstart{When was goat domesticated?}
+{5000 B.C.}{1}
+{2000 B.C.}{0}
+{600 B.C.}{0}
+{25,000 B.C.}{0}
+\qstop
+
+\qstart{When did the Andites disappear?}
+{2000 B.C.}{1}
+{3000 B.C.}{0}
+{12,000 B.C.}{0}
+{640 A.D.}{0}
+\qstop
+
+\qstart{Who were the ancestors of the so\hyp{}called Nordic races, the forefathers of the Scandinavian, German, and Anglo-Saxon peoples?}
+{Nodites}{0}
+{Andonites}{0}
+{Andites}{1}
+{green men}{0}
+\qstop
+
 \qpaper{81}{Development of Modern Civilization}
+
+\qstart{Did Stone, Bronze and Iron Ages exist at the same time in different localities?}
+{yes}{1}
+{no}{0}
+\qstop
 
 \qpaper{82}{The Evolution of Marriage}
 
@@ -2295,9 +2732,22 @@
 
 \qpaper{84}{Marriage and Family Life}
 
+\qstart{What is the effect of shifting parental responsibility to state or church on the welfare and advancement of civilization?}
+{no effect}{0}
+{beneficial}{0}
+{suicidal}{1}
+\qstop
+
 \qpaper{85}{The Origins of Worship}
 
 \qpaper{86}{Early Evolution of Religion}
+
+\qstart{What is the natural state of the savage mind?}
+{anxiety}{1}
+{anger}{0}
+{joy}{0}
+{stillness}{0}
+\qstop
 
 \qpaper{87}{The Ghost Cults}
 
@@ -2337,7 +2787,18 @@
 
 \qpaper{91}{The Evolution of Prayer}
 
+\qstart{Which of these two came first?}
+{prayers}{1}
+{belief in spirits}{0}
+\qstop
+
 \qpaper{92}{The Later Evolution of Religion}
+
+\qstart{The combined teachings of which religions were synthesized by Nanak and his followers into Sikhism?}
+{Islam, Hinduism, and Buddhism}{1}
+{Islam, Hinduism, and Christianity}{0}
+{Islam, Zoroastrianism, and Mithraism}{0}
+\qstop
 
 \qpaper{93}{Machiventa Melchizedek}
 
@@ -2417,6 +2878,18 @@
 
 \qpaper{100}{Religion in Human Experience}
 
+\qstart{What is the result of elevating purely personal evaluations to the levels of absolutes?}
+{sin}{0}
+{evil}{1}
+{good}{0}
+{iniquity}{0}
+\qstop
+
+\qstart{Should the trancelike state of visionary consciousness be cultivated as a religious experience?}
+{no}{1}
+{yes}{0}
+\qstop
+
 \qpaper{101}{The Real Nature of Religion}
 
 \qpaper{102}{The Foundations of Religious Faith}
@@ -2431,11 +2904,23 @@
 
 \qpaper{107}{Origin and Nature of Thought Adjusters}
 
+\qstart{What is the average age of receiving the Thought Adjuster on Urantia?}
+{6 years}{1}
+{7 years}{0}
+{20 years}{0}
+{40 years}{0}
+\qstop
+
 \qpaper{108}{Mission and Ministry of Thought Adjusters}
 
 \qpaper{109}{Relation of Adjusters to Universe Creatures}
 
 \qpaper{110}{Relation of Adjusters to Individual Mortals}
+
+\qstart{Do the adjutant mind-spirits continue to function on the mansion worlds?}
+{yes}{0}
+{no}{1}
+\qstop
 
 \qpaper{111}{The Adjuster and the Soul}
 
@@ -2612,6 +3097,16 @@
 
 \qpaper{122}{Birth and Infancy of Jesus}
 
+\qstart{Was Joseph a descendant of David \&\ Solomon?}
+{yes }{0}
+{no}{1}
+\qstop
+
+\qstart{Did Joseph descend from Andon \&\ Fonta, Nodites, Sumerians through Abraham?}
+{yes}{1}
+{no}{0}
+\qstop
+
 \qstart{When was John the Baptist born?}
 {25 March 7 B.C.}{1}
 {13 September 6 B.C.}{0}
@@ -2643,12 +3138,27 @@
 
 \qpaper{125}{Jesus at Jerusalem}
 
+\qstart{What was Jesus' attitude towards the doctrine of the wrath of God?}
+{accepted it wholeheartedly}{0}
+{accepted reluctantly}{0}
+{refused to accept}{1}
+\qstop
+
 \qpaper{126}{The Two Crucial Years}
 
 \qstart{Which book influenced Jesus to adopt as his inaugural title ``the Son of Man''?}
 {Book of Enoch}{1}
 {Daniel}{0}
 {Ezekiel}{0}
+\qstop
+
+\qstart{How old was Jesus when he assumed family responsibility following the death of his father?}
+{13}{0}
+{14}{1}
+{17}{0}
+{18}{0}
+{20}{0}
+{30}{0}
 \qstop
 
 \qpaper{127}{The Adolescent Years}
@@ -2730,6 +3240,15 @@
 
 \qpaper{158}{The Mount of Transfiguration}
 
+\qstart{Who or what did Peter, James \&\ John see on the Mount of Transfiguration?}
+{Jesus talking to Lucifer and Caligastia}{0}
+{Jesus talking to Gabriel and the Father Melchizedek}{1}
+{Jesus meditating}{0}
+{Jesus talking to Moses and Elijah}{0}
+{Jesus talking to Enoch and Elijah}{0}
+{Jesus talking to aliens}{0}
+\qstop
+
 \qpaper{159}{The Decapolis Tour}
 
 \qpaper{160}{Rodan of Alexandria}
@@ -2802,6 +3321,12 @@
 
 \qpaper{183}{The Betrayal and Arrest of Jesus}
 
+\qstart{To whom did Jesus say ``They who take the sword shall perish by the sword''?}
+{a Roman soldier}{0}
+{Peter}{1}
+{a zealot}{0}
+\qstop
+
 \qpaper{184}{Before the Sanhedrin Court}
 
 \qstart{Why Judas Iscariot could not be used by the Sanhedrists as a witness in the ``trial'' of the Master?}
@@ -2848,400 +3373,9 @@
 
 \qpaper{196}{The Faith of Jesus}
 
-\qstart{Which of these are forever forbidden to us?}
-{Divinington}{1}
-{nether Paradise}{1}
-{the seven sacred Paradise satellites of the Son}{1}
-{Paradise}{0}
-{Uversa}{0}
-{Sonarington}{0}
-{Ascendington}{0}
-\qstop
-
-\qstart{Is the Andromeda Galaxy (M31) inside or outside the space level of inhabited superuniverses?}
-{inside}{0}
-{outside}{1}
-{exactly on the border}{0}
-\qstop
-
-\qstart{Who is the eldest Primary Midwayer?}
-{1-2-3 the First}{1}
-{the Father Midwayer}{0}
-{Adamson}{0}
-{Adam}{0}
-\qstop
-
-\qstart{Which of these two came first?}
-{Prayers}{1}
-{Belief in spirits}{0}
-\qstop
-
-\qstart{Does cosmic force respond to mind?}
-{no}{0}
-{yes}{1}
-\qstop
-
-\qstart{What is the result of elevating purely personal evaluations to the levels of absolutes?}
-{sin}{0}
-{evil}{1}
-{good}{0}
-{iniquity}{0}
-\qstop
-
-\qstart{Which of these are \bibemph{not} absonite beings?}
-{Architects of the Master Universe}{0}
-{Primary Master Force Organizers}{0}
-{Transcendental Recorders}{0}
-{Seven Master Spirits}{1}
-\qstop
-
-\qstart{Adam and Eve were indwelt by Thought Adjusters...}
-{when they were citizens of Jerusem}{0}
-{during their life in the first garden prior to the default}{0}
-{after they were reduced to mortal status subsequent to the default}{1}
-\qstop
-
-\qstart{How did the members of Adam's family cook their food?}
-{roasted on open fire}{0}
-{baked in stone ovens}{0}
-{didn't cook at all --- ate it raw}{1}
-{boiled in the water}{0}
-\qstop
-
-\qstart{How many children did Adam and Eve have before coming to this planet?}
-{12}{0}
-{100}{1}
-{none}{0}
-{3}{0}
-\qstop
-
-\qstart{When did Adamites cease to exist as a race upon Urantia?}
-{15,000 B.C.}{1}
-{6,000 B.C.}{0}
-{600 B.C.}{0}
-{300 A.D.}{0}
-\qstop
-
-\qstart{What happened to the tree of life after Nodites invaded Eden?}
-{destroyed by fire}{1}
-{chopped into pieces and swallowed}{0}
-{ground to dust}{0}
-{sold for thirty pieces of silver}{0}
-\qstop
-
-\qstart{What does the Biblical expression ``eating of the tree of the knowledge of good and evil'' really mean?}
-{literally eating of some forbidden tree, as the Bible says so}{0}
-{combining good and evil}{1}
-{knowing one another intimately}{0}
-{learning to distinguish between good and evil}{0}
-\qstop
-
-\qstart{How many seats of the Four and Twenty Counsellors are not permanently occupied?}
-{8}{1}
-{4}{0}
-{0}{0}
-{1}{0}
-\qstop
-
-\qstart{What happened to the remnants of Neanderthal races?}
-{exterminated by the Adamites}{1}
-{became extinct}{0}
-{exterminated by the Nodites}{0}
-\qstop
-
-\qstart{When is the slavery abolished on a normal evolutionary sphere?}
-{upon arrival of Adam}{1}
-{upon arrival of Planetary Prince}{0}
-{in the age of Light and Life}{0}
-{persists forever}{0}
-\qstop
-
-\qstart{When was goat domesticated?}
-{5000 B.C.}{1}
-{2000 B.C.}{0}
-{600 B.C.}{0}
-{25,000 B.C.}{0}
-\qstop
-
-\qstart{When did the Andites disappear?}
-{2000 B.C.}{1}
-{3000 B.C.}{0}
-{12,000 B.C.}{0}
-{640 A.D.}{0}
-\qstop
-
-\qstart{Did Stone, Bronze and Iron Ages exist at the same time in different localities?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{What does the Bible refer to when it talks about ``the seven spirits of God like lamps burning before the throne''?}
-{seven adjutant mind-spirits}{1}
-{seven Absolutes}{0}
-{seven Master Spirits of the superuniverses}{0}
-\qstop
-
-\qstart{How many adjutant mind-spirits are there?}
-{3}{0}
-{4}{0}
-{7}{1}
-{10}{0}
-{12}{0}
-\qstop
-
-\qstart{Which of these is \bibemph{not} one of the seven adjutant mind-spirits?}
-{intuition}{0}
-{understanding}{0}
-{courage}{0}
-{knowledge}{0}
-{counsel}{0}
-{worship}{0}
-{wisdom}{0}
-{intellect}{1}
-\qstop
-
-\qstart{How many adjutant mind-spirits are reachable by subhuman (animal) mind?}
-{all 7}{0}
-{5}{1}
-{4}{0}
-{1}{0}
-{none}{0}
-{3}{0}
-\qstop
-
-\qstart{Which of the adjutant mind-spirits can minister only to human or midwayer (super-animal) level of mind?}
-{worship and wisdom}{1}
-{intuition and understanding}{0}
-{courage and counsel}{0}
-{intuition and knowledge}{0}
-\qstop
-
-\qstart{Which of the adjutant mind-spirits makes the most extensive contact with nonteachable (subhuman) levels of mind?}
-{intuition}{1}
-{courage}{0}
-{counsel}{0}
-{understanding}{0}
-\qstop
-
-\qstart{Which adjutant mind-spirit is responsible for spontaneous association of ideas and co-ordination of acquired knowledge?}
-{understanding}{1}
-{intuition}{0}
-{knowledge}{0}
-{wisdom}{0}
-\qstop
-
-\qstart{Which adjutant mind-spirit is responsible for the ability of will creatures to harmonize with their fellows and the origin of the gregarious instinct among the more lowly creatures?}
-{counsel}{1}
-{intuition}{0}
-{understanding}{0}
-{worship}{0}
-{knowledge}{0}
-\qstop
-
-\qstart{Does the Eternal Son fully comprehend the eternal plan of the Universal Father for the universe of universes?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{How many adjutant mind-spirits minister to midwayer as well as human types of mind?}
-{all seven}{0}
-{three}{0}
-{two}{1}
-{four}{0}
-\qstop
-
-\qstart{Which adjutant mind-spirits minister to midwayer minds?}
-{worship and wisdom}{1}
-{intuition and wisdom}{0}
-{knowledge and understanding}{0}
-{counsel and wisdom}{0}
-\qstop
-
-\qstart{Receptivity to which of the seven adjutant mind-spirits serves as a badge for spiritual-ascension candidacy of mortals?}
-{wisdom}{0}
-{knowledge}{0}
-{worship}{1}
-{courage}{0}
-\qstop
-
-\qstart{Which of the first humans responded to the influence of the adjutant mind-spirit of worship first?}
-{Andon}{0}
-{Fonta}{1}
-\qstop
-
-\qstart{What decision of Andon and Fonta constituted their first response to the adjutant mind-spirit of wisdom?}
-{worship God and him only}{0}
-{marry}{0}
-{flee home}{1}
-{eat only vegetables}{0}
-\qstop
-
-\qstart{What is the average age of receiving the Thought Adjuster on Urantia?}
-{6 years}{1}
-{7 years}{0}
-{20 years}{0}
-{40 years}{0}
-\qstop
-
-\qstart{Which present-day group of people resembles the early Andonites most?}
-{negroes}{0}
-{eskimo}{1}
-{native American indians}{0}
-{Australian aborigenes}{0}
-\qstop
-
-\qstart{Do the adjutant mind-spirits continue to function on the mansion worlds?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Is the doctrine of human re-incarnation true or false?}
-{TRUE}{0}
-{FALSE}{1}
-\qstop
-
-\qstart{Which ancient people never had a taboo on twins?}
-{Andonites}{1}
-{red}{0}
-{yellow}{0}
-{orange}{0}
-\qstop
-
-\qstart{Are animals relevant to the intellectual and physical evolution of humans?}
-{Yes, because of the experiential growth of the first five adjutant mind-spirits}{1}
-{Not at all}{0}
-{Not anymore}{0}
-\qstop
-
-\qstart{Does human mind depend on the brain capacity?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{How do the new species arise?}
-{as the result of the gradual accumulation of small variations}{0}
-{suddenly, as full-fledged and new orders of life}{1}
-{by the direct act of Deity}{0}
-\qstop
-
-\qstart{Do the seven adjutant mind-spirits ever become personal?}
-{no}{1}
-{yes}{0}
-\qstop
-
-\qstart{Does spirit gravity suffer time delays?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Does spirit gravity undergo space diminution?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{The transcendence of time and space by pure spirit energies is...}
-{due to the interposition of the antigravity forces of the Third Source and Centre}{0}
-{inherent in the absoluteness of the Eternal Son}{1}
-\qstop
-
-\qstart{Where do the lines of spirit gravity lead back to?}
-{Eternal Son}{1}
-{Universal Father}{0}
-{Infinite Spirit}{0}
-\qstop
-
-\qstart{What things are called personal?}
-{responding to the personality circuit of the Father}{1}
-{exhibiting intelligent behaviour}{0}
-{possessing self-consciousness}{0}
-\qstop
-
-\qstart{What things we call spirit?}
-{responding to the spirit circuit of the Eternal Son}{1}
-{originating in the Infinite Spirit}{0}
-{endowed with eternal life}{0}
-{invisible to mortal eyes}{0}
-\qstop
-
-\qstart{What things we call mater?}
-{responding to the material-gravity circuit centring in nether Paradise}{1}
-{visible to mortal eyes}{0}
-{that can perish with time}{0}
-\qstop
-
-\qstart{What is the effect of shifting parental responsibility to state or church on the welfare and advancement of civilization?}
-{no effect}{0}
-{beneficial}{0}
-{suicidal}{1}
-\qstop
-
-\qstart{The combined teachings of which religions were synthesized by Nanak and his followers into Sikhism?}
-{Islam, Hinduism, and Buddhism}{1}
-{Islam, Hinduism, and Christianity}{0}
-{Islam, Zoroastrianism, and Mithraism}{0}
-\qstop
-
-\qstart{Who were the ancestors of the so-called Nordic races, the forefathers of the Scandinavian, German, and Anglo-Saxon peoples?}
-{Nodites}{0}
-{Andonites}{0}
-{Andites}{1}
-{green men}{0}
-\qstop
-
-\qstart{What was Jesus' attitude towards the doctrine of the wrath of God?}
-{accepted it wholeheartedly}{0}
-{accepted reluctantly}{0}
-{refused to accept}{1}
-\qstop
-
-\qstart{Should the trancelike state of visionary consciousness be cultivated as a religious experience?}
-{no}{1}
-{yes}{0}
-\qstop
-
-\qstart{How many stars are in our local system of Satania?}
-{2000+}{1}
-{1000+}{0}
-{100000}{0}
-{1000000}{0}
-\qstop
-
-\qstart{What is the largest star in our universe?}
-{Fomalhaut}{0}
-{Alpha Centauri}{0}
-{Antares}{1}
-{Tau Ceti}{0}
-\qstop
-
-\qstart{Does the Infinite Spirit transmit the power of antigravity to other personalities?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{Which of these beings are endowed with antigravity?}
-{Solitary Messengers}{1}
-{Census Directors}{1}
-{Universe Circuit Supervisors}{1}
-{Associate Inspectors}{0}
-{Supreme Power Centers}{1}
-{Personal Aids of the Infinite Spirit}{1}
-\qstop
-
-\qstart{Can ultimatonic energies sometimes exhibit antigravity behaviour?}
-{yes}{1}
-{no}{0}
-\qstop
-
 \qstart{How could the cock crow when Peter denied Jesus if it was against the law to keep poultry in the city of Jerusalem?}
 {Peter's entire experience occurred in the courtyard of the palace of Annas on Mount Olivet. He did not follow Jesus to the palace of the high priest, Caiaphas.}{1}
 {It wasn't a cock crowing.}{0}
-\qstop
-
-\qstart{What is the natural state of the savage mind?}
-{anxiety}{1}
-{anger}{0}
-{joy}{0}
-{stillness}{0}
 \qstop
 
 \qstart{What state of mind virtually thwarts the work of the Thought Adjuster?}
@@ -3250,151 +3384,11 @@
 {deep contemplation}{0}
 \qstop
 
-\qstart{Is man an evolutionary descendant from apes?}
-{no}{1}
-{yes}{0}
-\qstop
-
-\qstart{Can the Eternal Son contact directly with human beings as the Father does through the gift of the prepersonal Thought Adjusters?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Did the bestowals of the Eternal Son in Havona add to the supposed experiential capacity of his existential nature?}
-{yes}{0}
-{no}{0}
-{we do not know, because this would fall within the bestowal mystery of the Paradise Sons}{1}
-\qstop
-
-\qstart{When was Havona (the central universe) created?}
-{500 billion years ago}{0}
-{6,000 years ago, on the first day of creation}{0}
-{never, it existed from eternity}{1}
-{9 billion years ago, at Big Bang}{0}
-\qstop
-
-\qstart{Which of the Paradise Deities is the first to be attained by the ascending pilgrims?}
-{Universal Father}{0}
-{Eternal Son}{0}
-{Infinite Spirit}{1}
-\qstop
-
-\qstart{God is love, the Son is mercy, the Spirit is...}
-{law}{0}
-{obedience}{0}
-{peace}{0}
-{ministry}{1}
-\qstop
-
-\qstart{Who or what is the ancestor of motion, change, and relationship?}
-{Paradise}{0}
-{Havona}{0}
-{Eternal Son}{0}
-{God of Action (The Third Source and Centre)}{1}
-\qstop
-
-\qstart{Is the Conjoint Creator omnipotent?}
-{yes}{0}
-{no}{0}
-{only in the domain of mind}{1}
-\qstop
-
-\qstart{Is the power of antigravity observably present in either the Universal Father or the Eternal Son?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Is the gravity-resistant phenomenon of a gyroscope of value to illustrate the effect of antigravity?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{Is the gravity-resistant phenomenon of a gyroscope of value to illustrate the cause of antigravity?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Which of these is a typical use of antigravity in the grand universe?}
-{establish physical equilibrium of the matter and energies}{1}
-{transport}{0}
-{overriding natural course of events on evolutionary worlds}{0}
-{amusement of the Deities}{0}
-\qstop
-
-\qstart{Is mind inherent in energy?}
-{yes}{0}
-{no}{1}
-\qstop
-
-\qstart{Is spirit always intelligent, i.e. minded in some way?}
-{yes}{1}
-{not necessarily}{0}
-\qstop
-
-\qstart{Is the Conjoint Creator absolute?}
-{yes}{0}
-{no}{0}
-{only in the realms of universal intelligence}{1}
-\qstop
-
-\qstart{What is the source of the mind endowment of the seven superuniverses?}
-{Seven Master Spirits}{1}
-{Seven Supreme Executives}{0}
-{Architects of the Master Universe}{0}
-{Ancients of Days}{0}
-\qstop
-
-\qstart{Energy is thing, mind is meaning, spirit is...}
-{value}{1}
-{substance}{0}
-{destiny}{0}
-{light}{0}
-\qstop
-
-\qstart{Was Joseph a descendant of David \&\ Solomon?}
-{yes }{0}
-{no}{1}
-\qstop
-
-\qstart{Did Joseph descend from Andon \&\ Fonta, Nodites, Sumerians through Abraham?}
-{yes}{1}
-{no}{0}
-\qstop
-
-\qstart{To whom did Jesus say ``They who take the sword shall perish by the sword''?}
-{a Roman soldier}{0}
-{Peter}{1}
-{a zealot}{0}
-\qstop
-
-\qstart{What was the ``Star of Bethlehem''?}
-{a brilliant evening star}{0}
-{a sign from God}{0}
-{a conjunction of Jupiter and Saturn}{1}
-\qstop
-
-\qstart{Who or what did Peter, James \&\ John see on the Mount of Transfiguration?}
-{Jesus talking to Lucifer and Caligastia}{0}
-{Jesus talking to Gabriel and the Father Melchizedek}{1}
-{Jesus meditating}{0}
-{Jesus talking to Moses and Elijah}{0}
-{Jesus talking to Enoch and Elijah}{0}
-{Jesus talking to aliens}{0}
-\qstop
-
 \qstart{How many siblings did Jesus have (including Amos, who died at an early age)?}
 {8}{1}
 {5}{0}
 {4}{0}
 {none}{0}
-\qstop
-
-\qstart{How old was Jesus when he assumed family responsibility following the death of his father?}
-{17}{0}
-{20}{0}
-{14}{1}
-{25}{0}
-{18}{0}
 \qstop
 
 \qstart{What age was Jesus when a messenger from Salvington said to him ``The hour has come. It is time that you began to be about your Father’s business''?}
@@ -3410,10 +3404,10 @@
 \qstop
 
 \qstart{How old was Jesus when he left his family home?}
-{27}{1}
-{21}{0}
-{30}{0}
 {16}{0}
+{21}{0}
+{27}{1}
+{30}{0}
 \qstop
 
 \qstart{How long did Jesus spend travelling during his ``transition years''?}
