Include cover image in Kobo Mini build

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,9 +1,12 @@
+\tunemarkup{pghanlin}{\newcommand{\coverimagescale}{1.67}}
+\tunemarkup{pgkoboaurahd}{\newcommand{\coverimagescale}{1.89}}
+\tunemarkup{pgnexus7}{\newcommand{\coverimagescale}{1.71}}
+\tunemarkup{pgkindledx}{\newcommand{\coverimagescale}{2.7}}
+\tunemarkup{pgkobomini}{\newcommand{\coverimagescale}{1.67}}
+
 \tunemarkup{coverimage}{%
 \newpagecolor{ubpagecolor}\afterpage{\restorepagecolor}
-\tunemarkup{pghanlin}{\begin{center}\includegraphics[scale=1.64]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
-\tunemarkup{pgkoboaurahd}{\begin{center}\includegraphics[scale=1.89]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
-\tunemarkup{pgnexus7}{\begin{center}\includegraphics[scale=1.71]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
-\tunemarkup{pgkindledx}{\begin{center}\includegraphics[scale=2.7]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}}
+\begin{center}\includegraphics[scale=\coverimagescale]{images/British-Study-Edition-Cover-tiny.jpg}\end{center}
 \newpage
 }
 
